# tarri

./: .gitignore  LICENSE  README.md  pyproject.toml  tarri_sesi.json
docs/: bahasa.md  database_api.md
examples/: akun.txt  akuns.txt  coba.tarri  contoh.tarri  test-full-menu.tarri  test-login-txt.tarri  test2.tarri  test_bd_2.tarri  test_input.tarri  test_input_tipedata.tarri  txt_baru.txt
examples/basis_data/: basis_data_siswa.sqlite
src/examples/: halo.tarri
src/tarri/: __init__.py  cli.py  datatypes_list.py  grammar.lark  help.py  informasi.py  interpreter.py  keyword_list.py  keywords.py  loging.py  parser_global.py
src/tarri.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tarri/database/: buatbasisdata.py  buattabel.py  permintaan.py
src/tarri/datatypes/: __init__.py  angka.py  boolean.py  daftar.py  desimal.py  kata.py  null.py
src/tarri/functions/: angkaAcak.py  angka_acak.py  cari_data.py  cetak_detail.py  cetak_henti.py  halaman.py  huruf_acak.py  kataAcak.py  kata_acak.py  kata_bijak.py  kelolaJson.py  kelolaTxt.py  lacak.py  lempar_pesan.py  lorem_ipsum.py  masukkan.py  rute.py  sandi.py  slug.py  termasuk.py  tipe_data.py  tipedata.py  tujuan.py  urutkan_data.py  uuid.py
src/tarri/interpreter/: __init__.py  core.py
src/tarri/interpreter/exec_nodes/: args.py  auto_var_decl.py  block.py  call_expr.py  call_function.py  call_stmt.py  compare.py  dict_literal.py  entry_point.py  evaluate_expr.py  foreach_stmt.py  func_call.py  func_decl.py  list_literal.py  loop_stmt.py  node.py  string.py  tabel_stmt.py
src/tarri/keywords/: __init__.py  cetak.py  kataAcak.py  kondisi.py
src/tarri/keywords.old/: __init__.py  cetak.py  kataAcak.py  kondisi.py
src/tarri/repl/: repl.py
src/tarri/session/: sesi.py
src/tarri/support/: __init__.py  bilangan.py  kalender.py  lainya.py  list.py  matematika.py  teks.py  waktu.py  waktu_proses.py
src/tarri/web/: runner.py
